--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "author": "OneGeco (onegeco@outlook.com)",
   "license": "MIT",
   "dependencies": {
-    "vuex": "^3.5.1",
+    "@nativescript/core": "^7.0.3",
     "@nativescript/theme": "^2.3.3",
+    "axios": "^0.21.1",
+    "nativescript-status-bar": "^1.2.0",
     "nativescript-vue": "^2.8.1",
-    "@nativescript/core": "^7.0.3"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@nativescript/android": "7.0.1",
+    "@nativescript/ios": "7.2.0",
     "@nativescript/webpack": "^3.0.4",
     "babel-loader": "^8.1.0",
     "nativescript-vue-template-compiler": "^2.8.1",
